src/client/App.css
/* ... */
.comp-three-text {
  font-weight: 100;
  font-size: 16pt;
  width: 75%;
  padding:25px;
  /* padding-top: 50px; */
  padding-bottom: 50px;
  @media (max-width:1115px){
    width: 100%;
  }
  @media (max-width:875px){
    width: 90%;
    
  }
}

.comp-three-title {
  display: flex;
  text-align: center;
  align-items: center;
  @media (max-width: 800px){
    scale: 75%;
  }
  /* @media (max-width: 500px){
    scale: 50%;
  } */
}

.compFour {
  min-height: 95vh;
  width: 100vw;
  background-color: #364a60;
  display: flex;
  align-items: center;
  justify-content: center;
}

.comp-Four {
  display: flex;
  width: 75vw;
  align-items: center;
  height: 100%;
  @media (max-width:1250px){
   width: 90%; 
  }
  @media (max-width: 740px){
    flex-direction: column;
  }
}

.fourTitle {
  color: #f2ebe0;
  height: 100%;
  text-align: center;
  @media (max-width:1050px){
  };
  @media (max-width:875px){
    scale: 75%;
  }
  @media (max-width:740px){
    margin-top: 0px;
  }
}

.credential {
  min-height: 40vh;
  padding-left: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color:#1e2b3a;
  border-bottom: 4px dotted rgba(240, 240, 240, .2);
  @media (max-width: 550px){
    min-height: fit-content;
  }
}

.navbar {
  display: flex;
  width: 100vw;
  min-height: 6vh;
  background-color: #cad1ce;
  justify-content: center;
}

.navUl {
  width: 75vw;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 30px;
  padding-right: 20px;
  padding-bottom: 10px;
  padding-top: 10px;
  height: auto;
  @media (max-width:600px){
    justify-content: center;
    padding-right: 0px;
  }
  @media (max-width: 431px) {
    width: 90%;
    justify-content: space-around;
    gap: 0px;
  }
}

.li {
  width: fit-content;
  height: 23px;
  border-radius: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  @media (max-width: 450px){
    scale: 75%;
  }
}

.fourPar {
  margin-top: 15px;
  text-align: center;
  @media (max-width: 730px){
    margin-left: 50px;
    margin-right: 50px;
    scale: 80%;
  }
}

h3 {
  text-align: center;
  font-weight: 100;
  /* width: 90%; */
  line-height: 1.5;
}

.textDiv {
  margin-bottom: 20px;
}

.whiteText {
  color:#b5b5b5;
  @media (max-width: 1440px){
    width: 90%;
  }
}

.delete-user-button {
  @media (max-width: 1330px){
    width: 90%;
  }
}

.billPageHeader {
  color:#cad1ce;
  font-size: 20pt;
  margin-top: 2vh;
  @media (max-width: 800px){
    scale: 75%;
    margin-left: 50px;
    margin-right: 50px;
    padding-left: 50px;
    padding-right: 50px;
    font-weight: bold;
  }
}

.hierarchy {
  @media (max-width:1250px) {
    scale: 75%;
  }
  @media (max-width:740px){
    width: 60%;
  }
}

h2 {
  margin-bottom: 20px;
  margin-top: -45px;
  color: #cad1ce;
  @media (max-width: 730px) {
    margin-left: 5vw;
    margin-right: 5vw;
  }
}

h1 {
  font-size: 73px;
  font-weight: 200;
  @media (max-width: 875px){
    margin-top: 25px;
  }
  
}

.compFour-text {
  width: 77%;
  color: #f2ebe0;
  height: 100%;
  text-align: left;
  padding-left: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  @media (max-width:1050px){
    width: 100vw;
    padding-left: 0px;
  }
}

.page {
  width: 100vw;
  min-height: 70vh;
  background-color: #364a60;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}

.auth-form, .reg-form {
  display: flex;
  flex-direction: column;
  border: 2px solid grey;
  padding: 25px;
  margin-top: 25px;
  border-radius: 5px;
  box-shadow: 0px 0px 2px 3px grey;
  @media (max-width: 480px){
    width: 90%;
  }
}

.authform-button {
  @media (max-width:800px){
    scale:100%;
    text-align: center;
  }
  @media (max-width: 480px){
    width: 100%;
  }
}

.reg-form {
  width: 50%;
  min-height: fit-content;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  @media (max-width: 1200px){
    width: 90%;
  }
  @media (max-width:480px){
    flex-direction: column;
  }
}

.form-input, .reg-form-input {
  min-height: 30px;
  margin-top: 1.5%;
  background-color: #364a60;
  color:#f2ebe0;
  font-size: 15pt;
  padding: 3px;
}

.reg-form-input {
  width: 35%;
  @media (max-width:600px){
    width: 100%;
  }
}

.email {
  min-width: 80%;
}

.form-input:focus, .reg-form-input:focus {
  /* outline-color:grey; */
  outline: none;
}

.form-input::placeholder, .reg-form-input::placeholder {
  color:#cad1ce;
}

.badlogin {
  color: lightcoral;
  margin-top: 15px;
  font-size: 14pt;
  text-align: center;
}

.h6 {
  display: block;
  flex-direction: row;
}

a {
  text-decoration: none;
}

a:hover {
  scale: 1.01;
  cursor: pointer;
  z-index: 6;
}

a:active {
  scale: 1;
}

li:hover {
  margin-bottom: -1px;
  border-bottom: 1px solid black;
  /* scale: 1; */
}

.testimonial {
  min-height: 79vh;
  display: flex;
  width: 100vw;
  background-color:#364a60;
  padding-top: 50px;
  padding-bottom: 50px;
  @media (max-width: 1110px){
    padding-top: 0px;
  }
}

.heart-puzzle {
  max-width: 40%;
}

.testimonial2 {
  background-color: #cad1ce;
}

.img_textHolder {
  display: flex;
  width: 100vw;
  padding: 30px;
  justify-content: space-evenly;
  align-items: center;
  @media (max-width:1110px){
    flex-direction: column;
  }
}

.img_textHolder2{
  @media (max-width:1110px){
    display:flex;
    flex-direction: column-reverse;
  }

}

.text-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  color: #cad1ce;
  margin-top: 0px;
  width: 37%;
  @media (max-width:1110px){
    width: 80%;
  }
  @media (max-width:500px){
    width: 100%;
  }
}

.text {
  color:#cad1ce;
  margin-top: 5px;
  @media (max-width:575px){
    width: 90%;
  }
}

.text-header {
  @media (max-width: 550px){
    width: 100%;
    font-size:30pt;
    text-align: center;
  }
}

.two {
  color:#1e2b3a;
}
/* ... */

